--- a/index.html
+++ b/index.html
@@ -36,13 +36,8 @@
                 style="width: 350px;" />
             <div class="profile-content float-left">
                 <h1 class="name">Victor Abuke</h1>
-                <h2 class="desc">Software Developer</h2>
-                <ul class="social list-inline">
-                    <li class="list-inline-item">
-                        <a href="https://x.com/sly2tuff" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li>
+                <h2 class="desc" style="text-align: center;">Software Developer</h2>
+                <ul class="social list-inline" style="text-align: center;">
                     <li class="list-inline-item">
                         <a href="https://www.linkedin.com/in/victor-abuke-5b28a4246/" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
@@ -51,11 +46,6 @@
                     <li class="list-inline-item">
                         <a href="https://github.com/Chronos91" target="_blank">
                             <i class="fab fa-github-alt"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="" target="_blank">
-                            <i class="fab fa-stack-overflow"></i>
                         </a>
                     </li>
                     <li class="list-inline-item last-item">
@@ -81,12 +71,9 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I'm a backend developer with a passion for Python and Django, dedicated to creating
-                                systems that tackle real-world challenges. Curiosity drives me to explore new
-                                technologies, whether through coding, diving into the latest tech reads, or
-                                engaging in tech communities. Outside of work, you'll find me staying active with
-                                regular workouts, as I believe in balancing my professional and personal life through
-                                fitness</p>
+                            <p>As a Python developer with a focus on backend systems, I love working with Django to
+                                build scalable solutions. I’m always exploring the latest tech trends and ways to
+                                improve my skills</p>
                         </div>
                         <!--//content-->
                     </div>
@@ -253,104 +240,49 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
 
-                            <!--//item-->
                             <div class="item">
                                 <h3 class="title">
                                     Backend Developer -
                                     <span class="place"><a href="#">Jolly Tech</a></span>
                                     <span class="year">(2023 - 2024)</span>
                                 </h3>
-                                <p>Contributed to the development and maintenance of backend systems and services:</p>
                                 <ul>
-                                    <li>Developed and maintained scalable and high-performance backend systems and APIs
-                                        for various applications.</li>
-                                    <li>Managed database tasks including schema design, query optimization, and data
-                                        integrity, along with regular backups and migrations.</li>
-                                    <li>Created and optimized RESTful APIs for seamless integration with frontend
-                                        applications and third-party services.</li>
-                                    <li>Implemented performance tuning techniques to enhance system efficiency and
-                                        responsiveness.</li>
-                                    <li>Collaborated with frontend developers, project managers, and stakeholders to
-                                        ensure successful project delivery.</li>
-                                    <li>Troubleshot and resolved backend issues, providing timely support to maintain
-                                        application stability.</li>
+                                    <li>Built scalable backend systems and APIs.</li>
+                                    <li>Managed database design, optimization, and migration.</li>
+                                    <li>Integrated RESTful APIs with frontend and third-party services.</li>
+                                    <li>Enhanced system performance and troubleshooting.</li>
                                 </ul>
                             </div>
-                            <!--//item-->
+
                             <div class="item">
                                 <h3 class="title">
                                     Backend Developer -
-                                    <span class="place">
-                                        <a href=""></a>
-                                    </span>
-                                    <span class="year">(freelance)</span>
+                                    <span class="place"><a href="#">Freelance</a></span>
+                                    <span class="year">(2022)</span>
                                 </h3>
-                                <p>Led the development and optimization of backend services for a tech company. Key
-                                    achievements include:</p>
                                 <ul>
-                                    <li>Architected and developed a robust blogging system that supports thousands of
-                                        concurrent users.</li>
-                                    <li>Designed a scalable newsletter system with advanced analytics and user
-                                        segmentation features.</li>
-                                    <li>Integrated a real-time chat system, enhancing customer support and user
-                                        engagement.</li>
-                                    <li>Built an admin dashboard with data insights, improving operational
-                                        efficiency.</li>
+                                    <li>Developed a high-traffic blogging system.</li>
+                                    <li>Built a newsletter system with advanced analytics.</li>
+                                    <li>Integrated a real-time chat system for improved customer support.</li>
                                 </ul>
                             </div>
-                            <!--//item-->
+
                             <div class="item">
                                 <h3 class="title">
                                     Backend Developer (Volunteer) -
-                                    <span class="place">
-                                        <a href="https://learnblue.org">Learnblue</a>
-                                    </span>
+                                    <span class="place"><a href="https://learnblue.org">Learnblue</a></span>
                                     <span class="year">(2020 - Present)</span>
                                 </h3>
-                                <p>Contributed to the development and maintenance of a non-profit educational platform
-                                    by:</p>
                                 <ul>
-                                    <li>Enhancing API endpoints for better data retrieval and user experience.</li>
-                                    <li>Improving site performance and security through code optimization and regular
-                                        updates.</li>
+                                    <li>Enhanced API performance for an educational platform.</li>
+                                    <li>Improved site security and performance with regular updates.</li>
                                 </ul>
                             </div>
-                            <!--//item-->
-                            <div class="item">
-                                <h3 class="title">
-                                    Full-Stack Developer (Volunteer) -
-                                    <span class="place">
-                                        <a href="https://nhub.org.ng">Nhub</a>
-                                    </span>
-                                    <span class="year">(2019 - 2020)</span>
-                                </h3>
-                                <p>Developed enterprise-level web applications for various businesses, featuring:</p>
-                                <ul>
-                                    <li>Custom eCommerce platforms with integrated payment gateways.</li>
-                                    <li>Advanced analytics dashboards for business intelligence.</li>
-                                    <li>Automated payroll systems and ticketing systems for efficient operations.</li>
-                                </ul>
-                            </div>
-                            <!--//item-->
-                            <div class="item">
-                                <h3 class="title">
-                                    IT Assistant - <span class="place">Sojey Enterprise</span>
-                                    <span class="year">(2018 - 2019)</span>
-                                </h3>
-                                <p>Provided technical support and IT services, including:</p>
-                                <ul>
-                                    <li>Data processing, document management, and digital design (flyers,
-                                        presentations).</li>
-                                    <li>Streamlined operations by automating repetitive tasks, improving overall
-                                        efficiency.</li>
-                                </ul>
-                            </div>
-                            <!--//item-->
+
                         </div>
-                        <!--//content-->
                     </div>
-                    <!--//section-inner-->
                 </section>
+
 
 
                 <!--//section-->
@@ -380,20 +312,15 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li>
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    <span class="sr-only">Location:</span>
-                                    Dublin, Ireland
-                                </li>
-                                <li>
                                     <i class="fas fa-envelope"></i>
                                     <span class="sr-only">Email:</span>
-                                    <a href="#">flaco.hex2@gmail.com</a>
+                                    <a href="#">victorabuke2@gmail.com</a>
                                 </li>
                                 <li>
                                     <i class="fas fa-link"></i>
                                     <span class="sr-only">Website:</span>
-                                    <a href="https://github.com/Chronos91"
-                                        target="_blank">https://github.com/Chronos91</a>
+                                    <a href="https://victor-abuke.vercel.app"
+                                        target="_blank">https://victor-abuke.vercel.app</a>
                                 </li>
                             </ul>
                         </div>
@@ -547,11 +474,10 @@
                             <div class="item">
                                 <h3 class="title">
                                     <i class="fas fa-graduation-cap"></i>
-                                    BTech Mechanical Engineering
+                                    BTech Engineering
                                 </h3>
                                 <h4 class="university">
-                                    Federal University of Technology, Minna, Nigeria. <span
-                                        class="year">(2017-2022)</span>
+                                    Federal University of Technology <span class="year">(2017-2022)</span>
                                 </h4>
                             </div>
                             <!--//item-->
