--- a/index.html
+++ b/index.html
@@ -247,10 +247,11 @@
                                     <span class="year">(2023 - 2024)</span>
                                 </h3>
                                 <ul>
-                                    <li>Built scalable backend systems and APIs.</li>
-                                    <li>Managed database design, optimization, and migration.</li>
-                                    <li>Integrated RESTful APIs with frontend and third-party services.</li>
-                                    <li>Enhanced system performance and troubleshooting.</li>
+                                    <li>Developed scalable backend systems using Python/Django and JavaScript to support high-performance applications</li>
+                                    <li>Managed frontend development using React for dynamic user interfaces, ensuring responsive designs and seamless user experience across devices</li>
+                                    <li>Led database design, optimization, and migration with PostgreSQL, reducing query execution time and ensuring efficient data handlin</li>
+                                    <li>Integrated third-party services and RESTful APIs with both frontend and backend systems, improving the application's functionality and performance</li>
+                                    <li>Enhanced overall system performance by optimizing queries, implementing caching strategies, and addressing bugs through regular troubleshooting and debugging</li>
                                 </ul>
                             </div>
 
